@@ -12,11 +12,6 @@
   <property name="modal">False</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
-  <property name="decorated">True</property>
-  <property name="skip_taskbar_hint">False</property>
-  <property name="skip_pager_hint">False</property>
-  <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
-  <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="has_separator">False</property>
 
   <child internal-child="vbox">
@@ -38,7 +33,6 @@
 	      <property name="label">gtk-cancel</property>
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
-	      <property name="focus_on_click">True</property>
 	      <property name="response_id">-6</property>
 	    </widget>
 	  </child>
@@ -51,7 +45,6 @@
 	      <property name="label">gtk-save</property>
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
-	      <property name="focus_on_click">True</property>
 	      <property name="response_id">-5</property>
 	    </widget>
 	  </child>
@@ -139,7 +132,6 @@
 			  <property name="max_saved">10</property>
 			  <property name="directory_entry">False</property>
 			  <property name="modal">False</property>
-			  <property name="use_filechooser">False</property>
 
 			  <child internal-child="entry">
 			    <widget class="GtkEntry" id="combo-entry3">
@@ -184,7 +176,6 @@
 			  <property name="label" translatable="yes">Local file:</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
-			  <property name="focus_on_click">True</property>
 			  <property name="active">True</property>
 			  <property name="inconsistent">False</property>
 			  <property name="draw_indicator">True</property>
@@ -206,7 +197,6 @@
 			  <property name="label" translatable="yes">Web location:</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
-			  <property name="focus_on_click">True</property>
 			  <property name="active">False</property>
 			  <property name="inconsistent">False</property>
 			  <property name="draw_indicator">True</property>
@@ -230,7 +220,6 @@
 			  <property name="browse_dialog_title" translatable="yes">Save to HTML File</property>
 			  <property name="directory_entry">False</property>
 			  <property name="modal">False</property>
-			  <property name="use_filechooser">False</property>
 
 			  <child internal-child="entry">
 			    <widget class="GtkEntry" id="combo-entry1">
